--- a/ut2/u7/vmweb/templates/index.html
+++ b/ut2/u7/vmweb/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Vmweb</title>
+        <title>Super aplicación para gestión de máquinas virtuales</title>
         <link rel="stylesheet" type="text/css" href="/static/style.css"/>
     </head>
     <body>
